[package]
name = "discordBot"
version = "0.1.0"
authors = ["tinam-26 <cmodica@uncc.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rustcord = { git = "https://github.com/tcyrus/rustcord.git", branch = "patch-1" }
google-calendar3 = "*"

# This project intentionally uses an old version of Hyper. See
# https://github.com/Byron/google-apis-rs/issues/173 for more
# information.
hyper = { version = "0.10" }
hyper-rustls = "0.4"
serde = "1"
serde_json = "1"
yup-oauth2 = "1"
chrono = "0.4"
clokwerk = "0.1"
tokio = { version = "1", features = ["full"] }

[patch.crates-io]
untrusted = { path = "../untrusted" }
webpki = { path = "../webpki" }
ring = { path = "../ring" }